# nisq-routing-project-docs

./: .gitignore
nisq_routing_project_docs/: COMPLIANCE_MATRIX.md  DESIGN_SPEC.md  IMPLEMENTATION_PLAN.md  PRD.md  PROBLEM_STATEMENT.md  README.md  REWARD_AND_RUBRIC.md  SUBMISSION_RUNBOOK.md  TASK_SUITE_AND_GRADERS.md  __init__.py  baseline_results.json  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
nisq_routing_project_docs/scripts/: baseline_eval.py
nisq_routing_project_docs/server/: Dockerfile  README.md  __init__.py  app.py  graders.py  nisq_routing_environment.py  requirements.txt  tasks.py
nisq_routing_project_docs/tests/: __init__.py  helpers.py  test_environment.py  test_graders.py  test_tasks.py
